Fix header fixed on mobile #2

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -265,6 +265,7 @@
   /* Header */
   .header.fixed {
     top: -20px;
+    height: 58px;
   }
 
   .header .sign-up-btn {
